--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "url": "https://github.com/romavoitiv/omnifood/issues"
   },
   "homepage": "https://github.com/romavoitiv/omnifood#readme",
-    "browserslist": [
+  "browserslist": [
     "> 1%",
     "last 5 versions"
   ],
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
-    "postcss-cli": "^10.1.0"
+    "postcss-cli": "^10.1.0",
+    "flex-gap-polyfill": "^4.1.2"
   }
 }
